<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">StoryApp</string>
    <string name="thumbnail_image_story">thumbnail image story</string>
    <string name="author_name">author name</string>
    <string name="long_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Least sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="logout">logout</string>
    <string name="add_story">add story</string>
    <string name="upload">UPLOAD</string>
    <string name="description">Description</string>
    <string name="camera">Camera</string>
    <string name="image_result">image result</string>
    <string name="gallery">GALLERY</string>
    <string name="detail_image">detail image</string>
    <string name="login_image">login image</string>
    <string name="splash_image">splash image</string>
    <string name="email_not_valid">Email is not valid</string>
    <string name="name_cannot_empty">Name cannot be empty</string>
    <string name="password_not_valid" tools:ignore="PluralsCandidate">Password must be %1$d characters</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="login_success">login success</string>
    <string name="login_failed">login failed</string>
    <string name="permission_not_granted">Permission Not Granted</string>
    <string name="change_language">change language</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="appwidget_text">STORIES BANNER</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="empty_text">NO DATA</string>
    <string name="refresh_story">refresh story</string>
    <string name="choose_your_image">Choose your image</string>
    <string name="image_widget_item">image widget item</string>
    <string name="retry">Try Again</string>
    <string name="title_activity_maps_story">StoryApp Map</string>
    <string name="map_stories">Map Stories</string>
</resources>