<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:id="@+id/sv_add_story"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.stories.add.AddStoryActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_preview"
            android:layout_width="0dp"
            android:layout_height="400dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_camera"
            app:srcCompat="@drawable/ic_place_holder"
            android:layout_margin="8dp"
            android:contentDescription="@string/image_result" />

        <Button
            android:id="@+id/btn_camera"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/edt_description"
            app:layout_constraintBottom_toTopOf="@id/edt_description"
            app:layout_constraintEnd_toStartOf="@id/btn_gallery"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/camera"/>

        <Button
            android:id="@+id/btn_gallery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/edt_description"
            app:layout_constraintStart_toEndOf="@id/btn_camera"
            app:layout_constraintBottom_toBottomOf="@id/btn_camera"
            android:text="@string/gallery"/>

        <EditText
            android:id="@+id/edt_description"
            android:layout_width="0dp"
            android:layout_height="150dp"
            app:layout_constraintBottom_toTopOf="@+id/map_selector"
            app:layout_constraintStart_toStartOf="@+id/map_selector"
            app:layout_constraintEnd_toEndOf="@+id/map_selector"
            android:layout_marginBottom="8dp"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:scrollbars="vertical"
            android:gravity="top"
            android:hint="@string/description"/>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/map_selector"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="0dp"
            android:layout_height="400dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_upload"
            app:layout_constraintStart_toStartOf="@+id/btn_upload"
            app:layout_constraintEnd_toEndOf="@+id/btn_upload"
            tools:context=".ui.stories.map.MapsStoryActivity" />

        <Button
            android:id="@+id/btn_upload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="8dp"
            android:text="@string/upload"/>

        <ProgressBar
            android:id="@+id/upload_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
